libraries/ckit/regression/invalid-programs/r10.c
enum X {
 x1, x2, x3
 };

enum Y {
 y1, y2, y3
 };

main () {
  enum X *i;
  enum Y *k;
  k = i;
}
